# grpc_test_server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: TestService.cpp  TestService.h  main.cpp
src/proto/src/: test.proto
